--- a/ThirdExercise/PietroPrandini_FundamentalsOfElectronics_ThirdSPICEExercise.tex
+++ b/ThirdExercise/PietroPrandini_FundamentalsOfElectronics_ThirdSPICEExercise.tex
@@ -286,8 +286,8 @@ V_{i_2} =- \frac{V_{id}}{2} \label{Vi2d}
 \end{align}
 
 
-Applying a small alternate voltage signal to the circuit of the figure \ref{PiSimple} there aren't current on the resistance $r_0$ so it could be treated as a short circuit.\\
-Given that the circuit of the figure \ref{PiSimple} is symmetrical it's possible analyse the single ended behaviour of the circuit on figure \ref{PiSingle2}.
+Applying a small alternate voltage signal to the circuit of the figure \ref{PiSimple} the resistance $r_0$ could be treated as a short circuit because the current on it is null.\\
+Given that the circuit of the figure \ref{PiSimple} is symmetrical and it's possible analyse the single ended behaviour of the circuit on figure \ref{PiSingle2}.\par
 
 \begin{figure}[h]
   \centering
