--- a/ThirdExercise/PietroPrandini_FundamentalsOfElectronics_ThirdSPICEExercise.tex
+++ b/ThirdExercise/PietroPrandini_FundamentalsOfElectronics_ThirdSPICEExercise.tex
@@ -413,4 +413,7 @@ So the common mode gain would be null but also the single ended gain.\par
 \lstinputlisting{netlist/DifferentialAmplifierVID1000.cir}
 \lstinputlisting{netlist/DifferentialAmplifierVID1000.op}
 
+\chapter{CMOS Inverter}
+
+
 \end{document}
