--- a/ThirdExercise/tex/CMOSInverter.tex
+++ b/ThirdExercise/tex/CMOSInverter.tex
@@ -60,7 +60,7 @@ So in the equations \ref{wn} and \ref{wp} there is the weight of the MOSFET's ci
 \frac{W_p}{W_n} = \frac{\mu _p}{\mu _n} \implies W_p = \frac{\mu _p}{\mu _n}W_n \xRightarrow{(eq. \ref{mn}, \ref{mp}, \ref{wn})} W_p = \frac{48 \mu A / V^2}{12 \mu A / V^2} \cdot 50nm = 200nm
 \end{align}
 
-\subsection{Resuming}
+\subsection{Resuming}\label{MOSProperties}
 \begin{center}
 \begin{tabular}{|c|c|c|c|c|c|}
 \hline
@@ -71,3 +71,43 @@ $M_n$ & $12 \mu A / V^2$ & $50nm$ & $50nm$ & $0.7V$ & $0.01 V^{-1}$\\
 \hline
 \end{tabular}
 \end{center}
+
+\subsection{Characteristic $V_{IN}/V_{OUT}$}
+\lstinputlisting{netlist/CMOSInverter/Characteristic.cir}
+The output could be visible on figure \ref{characteristic}.
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=14cm]{graph/CMOSInverter/Characteristic.jpg}
+  \caption{CMOS Inverter - $V_{OUT}/V_{IN}$ characteristic.}
+  \label{characteristic}
+\end{figure}
+
+\subsection{Applying a square wave on input}
+\lstinputlisting{netlist/CMOSInverter/SquareWave.cir}
+The output could be visible on figure \ref{SquareWave}.
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=14cm]{graph/CMOSInverter/SquareWave.jpg}
+  \caption{CMOS Inverter - A square wave on input.}
+  \label{SquareWave}
+\end{figure}
+
+\subsection{Characteristic $V_{IN}/V_{OUT}$ - Changing $W_n$}
+\lstinputlisting{netlist/CMOSInverter/CharacteristicCWn.cir}
+The output could be visible on figure \ref{characteristicCWn}.
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=14cm]{graph/CMOSInverter/CharacteristicCWn.jpg}
+  \caption{CMOS Inverter - $V_{OUT}/V_{IN}$ characteristic varying $W_n$.}
+  \label{characteristicCWn}
+\end{figure}
+
+\subsection{Applying a square wave on input - Changing $W_n$}
+\lstinputlisting{netlist/CMOSInverter/SquareWaveCWn.cir}
+The output could be visible on figure \ref{SquareWaveCWn}.
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=14cm]{graph/CMOSInverter/SquareWaveCWn.jpg}
+  \caption{CMOS Inverter - A square wave on input varying $W_n$.}
+  \label{SquareWaveCWn}
+\end{figure}
