--- a/ThirdExercise/tex/CMOSInverter.tex
+++ b/ThirdExercise/tex/CMOSInverter.tex
@@ -75,7 +75,7 @@ $M_n$ & $12 \mu A / V^2$ & $50nm$ & $50nm$ & $0.7V$ & $0.01 V^{-1}$\\
 \subsection{Characteristic $V_{IN}/V_{OUT}$}
 \lstinputlisting{netlist/CMOSInverter/Characteristic.cir}
 The output could be visible on figure \ref{characteristic}.
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{graph/CMOSInverter/Characteristic.jpg}
   \caption{CMOS Inverter - $V_{OUT}/V_{IN}$ characteristic.}
@@ -85,7 +85,7 @@ The output could be visible on figure \ref{characteristic}.
 \subsection{Applying a square wave on input}
 \lstinputlisting{netlist/CMOSInverter/SquareWave.cir}
 The output could be visible on figure \ref{SquareWave}.
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{graph/CMOSInverter/SquareWave.jpg}
   \caption{CMOS Inverter - A square wave on input.}
@@ -95,7 +95,7 @@ The output could be visible on figure \ref{SquareWave}.
 \subsection{Characteristic $V_{IN}/V_{OUT}$ - Changing $W_n$}
 \lstinputlisting{netlist/CMOSInverter/CharacteristicCWn.cir}
 The output could be visible on figure \ref{characteristicCWn}.
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{graph/CMOSInverter/CharacteristicCWn.jpg}
   \caption{CMOS Inverter - $V_{OUT}/V_{IN}$ characteristic varying $W_n$.}
@@ -105,7 +105,7 @@ The output could be visible on figure \ref{characteristicCWn}.
 \subsection{Applying a square wave on input - Changing $W_n$}
 \lstinputlisting{netlist/CMOSInverter/SquareWaveCWn.cir}
 The output could be visible on figure \ref{SquareWaveCWn}.
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{graph/CMOSInverter/SquareWaveCWn.jpg}
   \caption{CMOS Inverter - A square wave on input varying $W_n$.}
