--- a/ThirdExercise/tex/CMOSInverter.tex
+++ b/ThirdExercise/tex/CMOSInverter.tex
@@ -72,7 +72,7 @@ $M_n$ & $12 \mu A / V^2$ & $50nm$ & $50nm$ & $0.7V$ & $0.01 V^{-1}$\\
 \end{tabular}
 \end{center}
 
-\subsection{Characteristic $V_{IN}/V_{OUT}$}
+\section{Characteristic $V_{IN}/V_{OUT}$}
 \lstinputlisting{netlist/CMOSInverter/Characteristic.cir}
 The output could be visible on figure \ref{characteristic}.
 \begin{figure}[H]
@@ -82,7 +82,7 @@ The output could be visible on figure \ref{characteristic}.
   \label{characteristic}
 \end{figure}
 
-\subsection{Applying a square wave on input}
+\section{Applying a square wave on input}
 \lstinputlisting{netlist/CMOSInverter/SquareWave.cir}
 The output could be visible on figure \ref{SquareWave}.
 \begin{figure}[H]
@@ -92,7 +92,7 @@ The output could be visible on figure \ref{SquareWave}.
   \label{SquareWave}
 \end{figure}
 
-\subsection{Characteristic $V_{IN}/V_{OUT}$ - Changing $W_n$}
+\section{Characteristic $V_{IN}/V_{OUT}$ - Changing $W_n$}
 \lstinputlisting{netlist/CMOSInverter/CharacteristicCWn.cir}
 The output could be visible on figure \ref{characteristicCWn}.
 \begin{figure}[H]
@@ -102,7 +102,7 @@ The output could be visible on figure \ref{characteristicCWn}.
   \label{characteristicCWn}
 \end{figure}
 
-\subsection{Applying a square wave on input - Changing $W_n$}
+\section{Applying a square wave on input - Changing $W_n$}
 \lstinputlisting{netlist/CMOSInverter/SquareWaveCWn.cir}
 The output could be visible on figure \ref{SquareWaveCWn}.
 \begin{figure}[H]
