--- a/ThirdExercise/tex/CMOSInverter.tex
+++ b/ThirdExercise/tex/CMOSInverter.tex
@@ -11,16 +11,6 @@
 V_{DD} = 5V
 \end{align}
 
-\begin{align} \label{mn}
-M_n \left\{
-\begin{array}{l}
-V_t = 0.7V\\
-K'_n = \mu _n C_{ox} = 48 \mu A / V^2\\
-\lambda = 0.01 V^{-1}
-\end{array}
-\right.
-\end{align}
-
 \begin{align} \label{mp}
 M_p \left\{
 \begin{array}{l}
@@ -31,11 +21,21 @@ K'_p = \mu _p C_{ox} = 12 \mu A / V^2\\
 \right.
 \end{align}
 
+\begin{align} \label{mn}
+M_n \left\{
+\begin{array}{l}
+V_t = 0.7V\\
+K'_n = \mu _n C_{ox} = 48 \mu A / V^2\\
+\lambda = 0.01 V^{-1}
+\end{array}
+\right.
+\end{align}
+
 \section{Dimensioning a balanced inverter}
 The conditions for a balanced inverter is on equation \ref{balanced}.\\
 It's granted that the transfer function of the inverter is symmetrical.\par
 \begin{align}
-\frac{W_p}{W_n} = \frac{\mu _p}{\mu _n} \label{balanced}
+\frac{W_p}{W_n} = \frac{\mu _n}{\mu _p} \label{balanced}
 \end{align}
 
 The length of the channel is usually setted to the minimum length of the fabrication process.\\
@@ -57,7 +57,7 @@ So in the equations \ref{wn} and \ref{wp} there is the weight of the MOSFET's ci
 \end{align} 
 
 \begin{align}
-\frac{W_p}{W_n} = \frac{\mu _p}{\mu _n} \implies W_p = \frac{\mu _p}{\mu _n}W_n \xRightarrow{(eq. \ref{mn}, \ref{mp}, \ref{wn})} W_p = \frac{48 \mu A / V^2}{12 \mu A / V^2} \cdot 50nm = 200nm
+\frac{W_p}{W_n} = \frac{\mu _n}{\mu _p} \implies W_p = \frac{\mu _p}{\mu _n}W_n \xRightarrow{(eq. \ref{mn}, \ref{mp}, \ref{wn})} W_p = \frac{48 \mu A / V^2}{12 \mu A / V^2} \cdot 50nm = 200nm \label{wp}
 \end{align}
 
 \subsection{Resuming}\label{MOSProperties}
@@ -66,8 +66,8 @@ So in the equations \ref{wn} and \ref{wp} there is the weight of the MOSFET's ci
 \hline
 MOS & $K'_{n,p}$ & $W_{n,p}$ & $L_{n,p}$ & $V_t$ & $\lambda$\\
 \hline
-$M_p$ & $48 \mu A / V^2$ & $200nm$ & $50nm$ & $0.7V$ & $0.01 V^{-1}$\\
-$M_n$ & $12 \mu A / V^2$ & $50nm$ & $50nm$ & $0.7V$ & $0.01 V^{-1}$\\
+$M_p$ & $12 \mu A / V^2$ & $200nm$ & $50nm$ & $0.7V$ & $0.01 V^{-1}$\\
+$M_n$ & $48 \mu A / V^2$ & $50nm$ & $50nm$ & $0.7V$ & $0.01 V^{-1}$\\
 \hline
 \end{tabular}
 \end{center}
